@@ -16,6 +16,7 @@ endif
 
 lib_a_SOURCES = aeabi_atexit.c
 lib_a_LIBADD = $(extra_objs)
+EXTRA_lib_a_SOURCES = trap.S syscalls.c libcfunc.c
 lib_a_DEPENDENCIES = $(extra_objs)
 
 if MAY_SUPPLY_SYSCALLS
